header z-index fix

--- a/css/default2024.css
+++ b/css/default2024.css
@@ -14,13 +14,13 @@ html                       { scrollbar-width: thin; scrollbar-color: var(--mainC
 body                       { margin: 0; padding: 0; font-size: 1.1em; font-family: "Trebuchet MS", serif; background-size: 100vw 100vh; background: radial-gradient(circle, var(--bgg_inner) 0%, var(--bgg_outter) 100%) fixed; }
 
 /* --- HEADER --- */
-header                     { width: 100%; height: var(--header_height); padding: 0 var(--header_padding) 0 var(--header_padding); background-color: var(--hd_background); }
-header>div                 { width: calc(100% - 2 * var(--header_padding)); display: flex; justify-content: space-between; }
-#header-logo img           { height: var(--header_height); filter: drop-shadow(0 0 10px var(--hd_title)); }
-#header-menu               { height: var(--header_height); width: 50%; display: flex; justify-content: flex-end; align-items: center; }
-#header-menu p             { height: var(--header_height); cursor: pointer; display: none; position: absolute; right: 7%; margin: 0; align-items: center; color: var(--hd_title); font-size: 5em; }
-#header-menu a             { height: var(--header_height); font-family: 'Xolonium', sans-serif; padding: 0 25px 0 25px; text-decoration: none; color: var(--hd_title); font-size: calc(var(--font_size_ratio) * 1em); }
-#header-menu a div         { height: var(--header_height); display: flex; justify-content: center; align-items: center; transition: .2s; filter: drop-shadow(0 0 10px var(--hd_title_glow)); }
+header                     { z-index: 1; width: 100vw; height: var(--header_height); padding: 0 var(--header_padding) 0 var(--header_padding); background-color: var(--hd_background); }
+header>div                 { z-index: 1; width: calc(100% - 2 * var(--header_padding)); display: flex; justify-content: space-between; }
+#header-logo img           { z-index: 1; height: var(--header_height); filter: drop-shadow(0 0 10px var(--hd_title)); }
+#header-menu               { z-index: 1; height: var(--header_height); width: 50%; display: flex; justify-content: flex-end; align-items: center; }
+#header-menu p             { z-index: 1; height: var(--header_height); cursor: pointer; display: none; position: absolute; right: 7%; margin: 0; align-items: center; color: var(--hd_title); font-size: 5em; }
+#header-menu a             { z-index: 1; height: var(--header_height); font-family: 'Xolonium', sans-serif; padding: 0 25px 0 25px; text-decoration: none; color: var(--hd_title); font-size: calc(var(--font_size_ratio) * 1em); }
+#header-menu a div         { z-index: 1; height: var(--header_height); display: flex; justify-content: center; align-items: center; transition: .2s; filter: drop-shadow(0 0 10px var(--hd_title_glow)); }
 #header-menu a:hover div   { color: var(--hd_highlight); filter: drop-shadow(0 0 10px var(--hd_highlight)); }
 
 /* ---  PAGE  --- */
